--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "tslint --project tsconfig.json",
-    "start": "tsc && node dist/index.js",
+    "lint": "eslint ./**/*.ts",
+    "lint:fix": "eslint ./**/*.ts --fix",
+    "start": "tsc && node --experimental-specifier-resolution=node dist/index.js",
     "build": "tsc"
   },
   "keywords": [],
@@ -14,7 +15,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^14.11.5",
-    "tslint": "^6.1.3",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
+    "eslint": "^7.12.0",
     "typescript": "^4.0.3"
-  }
+  },
+  "type": "module"
 }
