--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
+    "target": "ES2020",
+    "module": "ES2020",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
     "strict": true,
-    "esModuleInterop": true,
     "sourceMap": true,
     "outDir": "dist",
-    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "lib": ["es2015"]
+  "lib": ["ES2020"]
 }
