started adding nx

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-config-prettier": "6.0.0",
     "jest": "26.2.2",
     "prettier": "2.0.4",
+    "terser-webpack-plugin": "^5.0.1",
     "ts-jest": "26.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.0.0",
