--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -7,11 +7,14 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
     "importHelpers": true,
-    "target": "es2015",
-    "module": "esnext",
+    "strict": true,
+    "target": "ES2020",
+    "module": "ES2020",
+    "forceConsistentCasingInFileNames": true,
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2017", "dom"],
+    "lib": ["ES2020", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
