--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@typescript-eslint/parser": "^4.5.0",
     "eslint": "^7.12.0",
     "rollup": "^2.32.1",
+    "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-terser": "^7.0.2",
     "terser": "^5.3.8",
     "typescript": "^4.0.3"
