--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "eslint ./**/*.ts",
     "lint:fix": "eslint ./**/*.ts --fix",
     "start": "tsc && node --experimental-specifier-resolution=node dist/tsc/index.js",
+    "serve:lexer": "serve dist/sample-lexer-program",
+    "build:watch": "rm -rf ./dist && mkdir ./dist && watch 'tsc --incremental && rollup -c' src",
     "build": "rm -rf ./dist && mkdir ./dist && tsc && rollup -c"
   },
   "keywords": [],
@@ -22,8 +24,10 @@
     "rollup": "^2.32.1",
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-terser": "^7.0.2",
+    "serve": "^11.3.2",
     "terser": "^5.3.8",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "watch": "^1.0.2"
   },
   "type": "module"
 }
