--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "@rollup/plugin-replace": "^2.3.3",
+    "@types/codemirror": "0.0.98",
     "@types/node": "^14.11.5",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
@@ -29,5 +30,8 @@
     "typescript": "^4.0.3",
     "watch": "^1.0.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "codemirror": "^5.58.2"
+  }
 }
