--- a/.github/workflows/node-build-and-deploy.js.yml
+++ b/.github/workflows/node-build-and-deploy.js.yml
@@ -23,6 +23,6 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@3.7.1
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BRANCH: gh-pages # The branch the action should deploy to.
-        FOLDER: dist # The folder the action should deploy.
-        CLEAN: true # Automatically remove deleted files from the deploy branch
+        BRANCH: gh-pages 
+        FOLDER: dist/sample-lexer-program
+        CLEAN: true 
