--- a/.github/workflows/node-build-and-deploy.js.yml
+++ b/.github/workflows/node-build-and-deploy.js.yml
@@ -24,5 +24,5 @@ jobs:
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: gh-pages 
-        FOLDER: dist/sample-lexer-program
+        FOLDER: dist/web-ide
         CLEAN: true 
