--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ./**/*.ts",
     "lint:fix": "eslint ./**/*.ts --fix",
-    "start": "tsc && node --experimental-specifier-resolution=node dist/tsc/index.js",
-    "serve:lexer": "serve dist/sample-lexer-program",
+    "serve:web-ide": "serve dist/web-ide",
     "build:watch": "rm -rf ./dist && mkdir ./dist && watch 'tsc --incremental && rollup -c' src",
-    "build": "rm -rf ./dist && mkdir ./dist && tsc && rollup -c"
+    "build:watch:web-ide": "rm -rf ./dist && mkdir ./dist && watch 'tsc --incremental && SPECIFIC_PROJECT=web-ide rollup -c' src",
+    "build": "rm -rf ./dist && mkdir ./dist && tsc && rollup -c",
+    "build:ts": "tsc"
   },
   "keywords": [],
   "author": "Donato Wolfsiberg (donato@wolfisberg.dev)",
